- Added a right click menu item to fetch user-submitted SP paths from
  the wiki.
- Clickable links/buttons that might open the internal image viewer can be
  forced to be opened in the browser instead by holding Control (Command on
  Macs) when clicking the link/button. This is helpful to get around
  OutOfMemoryErrors when trying to load large images.
- Added GHA for PC for completeness.

Version 0.3.0
-------------
- GHWT, GHM, and GHSH are at long last supported.
- May possibly have fixed NullPointerException related to
  jshm.Score.equals(Score.java:590). Hard to test this though.
- The last game/instrument/difficulty you viewed is now saved and
  restored when you restart the program.
- Menu items that used Control for the accelerator keystroke should now
  use Command on Macs (though I can't really test this).
- Added more options to the right-click menu when browsing scores.
- Fixed bug that made the go to song feature stop working after opening
  the score upload wizard.
- Added a toolbar for quicker access to some of the menu commands.
- Added more song sorting options. Guitar Hero games can only be sorted
  by ScoreHero's sorting and title due to no apparant song data feed.
  Rock Band has the same in-game sorting options thanks to pksage's
  master song list. There are some discrepencies between his list
  and ScoreHero however. Those songs will show up in an <UNKNOWN> tier.
  The sorting can be selected from File -> Sort Songs by.
- There is now an option to hide songs and tiers that don't have any
  scores. You can still insert a score via the editor for a hidden song,
  which will cause it to appear in the list. This can be toggled in the
  File menu.
- Songs now have an icon to indicate where they are from (i.e. RB1, RB2,
  DLC, AC/DC).
- Corrected Classic Rock Track Pack tier to show up under RB1 for PS2.

Version 0.2.8
-------------
- Added more performance improvements. The "Downloaded Songs" tier in