@@ -11,6 +11,7 @@ import jshm.GameTitle;
 import jshm.Instrument;
 import jshm.SongOrder;
 import jshm.wt.*;
+import jshm.xml.GhSongInfoFetcher;
 import jshm.xml.WtSongDataFetcher;
 import jshm.sh.scraper.WtSongScraper;
 
@@ -290,5 +291,70 @@ public class WtSongUpdater {
 			if (null != session && session.isOpen())
 				session.close();
 		}
+	}
+	
+	public static void updateSongInfo(WtGameTitle ttl) throws Exception {
+		updateSongInfo(null, ttl);
+	}
+	
+	@SuppressWarnings("unchecked")
+	public static void updateSongInfo(final ResultProgressHandle progress, WtGameTitle ttl) throws Exception {
+		if (null != progress)
+			progress.setBusy("Downloading song meta data...");
+		GhSongInfoFetcher fetcher = new GhSongInfoFetcher();
+		fetcher.fetch(ttl);
+		Session session = null;
+		Transaction tx = null;
+		
+		try {
+			session = openSession();
+		    tx = session.beginTransaction();
+		    
+			int i = 0, total = fetcher.songMap.size(); 
+						
+			for (String key : fetcher.songMap.keySet()) {
+				if (null != progress)
+					progress.setProgress(
+						String.format("Processing song %s of %s", i + 1, total), i, total);
+				
+				String upperTtl = key.toUpperCase();
+				
+				List<WtSong> result =
+					(List<WtSong>) session.createQuery(
+						"FROM WtSong WHERE gameTitle=:gameTtl AND UPPER(title) LIKE :ttl")
+					.setString("gameTtl", ttl.title)
+					.setString("ttl", upperTtl)
+					.list();
+				
+				LOG.finer("result.size() == " + result.size());
+				
+				for (WtSong s : result) {
+					if (s.update(fetcher.songMap.get(key))) {
+						LOG.info("Updating song to: " + s);
+						session.update(s);
+					} else {
+						LOG.finer("No changes to song: " + s);
+					}
+				}
+				
+				if (i % 64 == 0) {
+					session.flush();
+					session.clear();
+				}
+				
+				i++;
+			}
+			
+		    tx.commit();
+		} catch (HibernateException e) {
+			if (null != tx && tx.isActive()) tx.rollback();
+			LOG.throwing("WtSongUpdater", "updateSongInfo", e);
+			throw e;
+		} finally {
+			if (null != session && session.isOpen())
+				session.close();
+		}
+		
+		ttl.initDynamicTiers();
 	}
 }
