@@ -9,6 +9,9 @@ Version 0.3.1
   Macs) when clicking the link/button. This is helpful to get around
   OutOfMemoryErrors when trying to load large images.
 - Added GHA for PC for completeness.
+- Added additional sorting options (artist, genre, decade) for Guitar Hero
+  games. This data is gathered from the ScoreHero Wiki page for that song.
+  If data is missing, you can update the song's wiki page to correct it.
 
 Version 0.3.0
 -------------
